--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                   </select>
                 </div>
             <div class="btn underline"><img src="icons/Souligne.png" alt=""></div>
-            <div class="change-color">
+            <div class="btn change-color">
               <label><img src="icons/Color.png" alt="">
-              <input type="color" class="btn color-picker" oninput="onChangeColor(this.value)">
+              <input type="color" class=" color-picker" oninput="onChangeColor(this.value)">
             </label>
           </div>
         </section>
