--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
         </div>
       </header>
       <div class="gallery-container">
-        <div class="filter-by-search-by flex space-between">
+        <div class="filter-by-search-by flex ">
           <input type="text" class="search-input flex" placeholder="Search"/>
           <div class="filter-by-more-btn-container flex">
-            <div class="sort-by">Funny Animal Men Women comoic smile</div>
+            <div class="sort-by flex">
+              <span>Funny</span><span>Animal</span> <span>Men</span><span>Women</span><span>comoic</span> <span>smile</span>
+            </div>
             <div class="more-btn">More</div>
           </div>
         </div>
@@ -71,7 +73,7 @@
           <img class="btn share" src="icons/share.png" alt="">
           <img class="btn download" src="icons/Download.png" alt="">
         </div>
-  </section>
+      </section>
     </main>
     <script src="js/service/memeService.js"></script>
     <script src="js/galleryController.js"></script>
