full responsive update

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         </section>
         <div class="stickers-container"></div>
         <div class="download-share-section flex">
-          <img class="btn share" src="icons/share.png" alt="">
-          <img class="btn download" src="icons/Download.png" alt="">
+          <img class="btn share" src="icons/share-btn.png" alt="">
+          <img class="btn download" src="icons/download-btn.png" alt="">
         </div>
       </section>
     </main>
