features and visual update

--- a/index.html
+++ b/index.html
@@ -71,12 +71,13 @@
         <div class="stickers-container"></div>
         <div class="download-share-section flex">
           <img class="btn share" src="icons/share-btn.png" alt="">
-          <img class="btn download" src="icons/download-btn.png" alt="">
+        <a href="#" onclick="onDownloadCanvas(this)" download=""><img class="btn download" src="icons/download-btn.png" alt=""></a>
         </div>
       </section>
     </main>
     <script src="js/service/memeService.js"></script>
     <script src="js/galleryController.js"></script>
     <script src="js/memeController.js"></script>
+    <script src="js/uploadAndDownloadController.js"></script>
   </body>
 </html>
