--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             </label>
           </div>
         </section>
-        <div class="stickers-container"></div>
+        <div class="stickers-container" >
+        </div>
         <div class="download-share-section flex">
           <img class="btn share" src="icons/share-btn.png" alt="">
         <a href="#" onclick="onDownloadCanvas(this)" download=""><img class="btn download" src="icons/download-btn.png" alt=""></a>
