--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class='main-layout flex align-center'>
           <ul class="main-nav flex clean-list align-center">
             <div class="main-logo">
-              <li><a href="#" class="logo">MemeGenerator</a></li>
+              <li><a href="#" class="logo" onclick="onReturnToGallery()">MemeGenerator</a></li>
             </div>
             <div class="nav-options flex">
               <li><a href="#" class="gallery" onclick="onReturnToGallery()">Gallery</a></li>
@@ -39,7 +39,6 @@
         <div class="canvas-container">
             <canvas class="main-editor-canvas flex" width="550" height="598"></canvas>
             <img src="img/creator-bg.png" class="creator-bg" alt="">
-            <img src="" alt="" class="selected-meme" />
             <div class="editor-tools">
                 <input type="text" class="meme-text" placeholder="Enter Meme Text" oninput="onUpdateTxt(this.value)" />
                 <section class="control-meme-text-container flex content-center">
@@ -64,18 +63,24 @@
             <div class="btn underline"><img src="icons/Souligne.png" alt=""></div>
             <div class="btn change-color">
               <label><img src="icons/Color.png" alt="">
-              <input type="color" class=" color-picker" oninput="onChangeColor(this.value)">
+              <input type="color" class="color-picker" oninput="onChangeColor(this.value)">
             </label>
           </div>
         </section>
         <div class="stickers-container" >
         </div>
         <div class="download-share-section flex">
-          <img class="btn share" src="icons/share-btn.png" alt="">
+          <a href="#" onclick="uploadImg()" download=""><img class="btn share" src="icons/share-btn.png"alt="">
+          </a>
         <a href="#" onclick="onDownloadCanvas(this)" download=""><img class="btn download" src="icons/download-btn.png" alt=""></a>
         </div>
       </section>
+      <section class="upload-container">
+      <div class="user-msg"></div>
+      <div class="share-container"></div>
+    </section>
     </main>
+    <script src="js/service/galleryService.js"></script>
     <script src="js/service/memeService.js"></script>
     <script src="js/galleryController.js"></script>
     <script src="js/memeController.js"></script>
